tests/snapshots/snapshot_tests__snapshot_event_assistant_delta.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "assistant_delta",
  "text": "Hello"
}
