tests/snapshots/snapshot_tests__snapshot_event_command_executed.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "command_executed",
  "command": "cargo test",
  "exit_code": 0,
  "output_preview": "test result: ok. 42 passed"
}
