tests/snapshots/snapshot_tests__snapshot_event_command_executed_no_exit_code.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "command_executed",
  "command": "long-running-job",
  "exit_code": null,
  "output_preview": null
}
