tests/snapshots/snapshot_tests__snapshot_event_error_with_code.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "error",
  "message": "backend crashed",
  "error_code": "backend_crashed"
}
