tests/snapshots/snapshot_tests__snapshot_event_file_changed.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "file_changed",
  "path": "src/lib.rs",
  "summary": "Added helper function"
}
