tests/snapshots/snapshot_tests__snapshot_event_run_started.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "run_started",
  "message": "beginning run"
}
