tests/snapshots/snapshot_tests__snapshot_event_tool_call.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "tool_call",
  "tool_name": "read_file",
  "tool_use_id": "tu_001",
  "parent_tool_use_id": null,
  "input": {
    "path": "src/main.rs"
  }
}
