tests/snapshots/snapshot_tests__snapshot_event_tool_call_nested.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "tool_call",
  "tool_name": "write_file",
  "tool_use_id": "tu_002",
  "parent_tool_use_id": "tu_001",
  "input": {
    "content": "data",
    "path": "out.txt"
  }
}
