tests/snapshots/snapshot_tests__snapshot_event_tool_result_error.snap
---
source: tests/snapshot_tests.rs
expression: e
---
{
  "ts": "2025-06-01T10:00:00Z",
  "type": "tool_result",
  "tool_name": "read_file",
  "tool_use_id": "tu_003",
  "output": {
    "error": "file not found"
  },
  "is_error": true
}
